# openrtc-runtime

./: .coderabbit.yaml  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  docker-compose.test.yml  pyproject.toml
.agents/: JOURNAL.md  PROMPT.md  TODO.md
.agents/skills/openrtc-python/: SKILL.md
.agents/skills/openrtc-voice-agents/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: audit.yml  bench.yml  build.yml  canary.yml  deploy-docs.yml  docs.yml  integration.yml  lint.yml  publish.yml  test.yml
docs/: _check_docs.py  assistant.md  audit-2026-05-02.md  changelog.md  cli.md  coming-from-livekit-agents.mdx  docs.json  examples.md  getting-started.md  index.md  index.mdx  livekit-plugins-hf-prompt.md  mint.json  package.json  release-v0.1.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/announcements/: v0.5-per-tenant-isolation.md
docs/api/: pool.md
docs/benchmarks/: density-v0.1.md
docs/cli/: top.md
docs/compliance/: audit-events.md
docs/concepts/: architecture.md  frameworks.md  hot-reload.md  migration.md  multi-tenancy.md  routing.md  session-introspection.md
docs/deployment/: mintlify.md
docs/design/: agent-server-integration.md  docs-restructure.md  framework-agnostic-backend.md  job-executor-protocol.md  proc-pool-surface.md  rust-inference-offload.md  v0.1.md  worker-state-inventory.md
docs/diagrams/: 01-vanilla-lifecycle.mmd  02-vanilla-topology.mmd  03-openrtc-lifecycle.mmd  04-openrtc-topology.mmd  05-contrast.mmd  06-scaling.mmd  README.md
docs/operations/: deployments.md  monitoring-deploys.md  rollback.md
docs/runbooks/: debugging-density.md  onboarding-a-tenant.md  tenant-incident.md
docs/superpowers/plans/: 2026-06-08-session-observer-protocol.md
docs/superpowers/specs/: 2026-06-08-session-observer-protocol-design.md
examples/: README.md  density_demo.py  main.py
examples/agents/: dental.py  restaurant.py
examples/frontend/: README.md  package-lock.json  package.json
examples/frontend/app/: app.css
examples/pipecat_agents/: assistant.py  echo.py
src/openrtc/: __init__.py  _version.py  cli.py  cli_app.py  cli_dashboard.py  cli_livekit.py  cli_params.py  cli_reporter.py  cli_types.py  context.py  metrics_stream.py  pool.py  provider_types.py  resources.py  tui_app.py
src/openrtc/backends/: __init__.py  registry.py
src/openrtc/cli/: __init__.py  base_cli.py  commands.py  dashboard.py  dashboard_cli.py  entry.py  entry_cli.py  livekit.py  livekit_cli.py  main_cli.py  params.py  pipecat_cli.py  reporter.py  reporter_cli.py  top_cli.py  types.py
src/openrtc/core/: audit.py  backend.py  circuit_breaker.py  config.py  discovery.py  membership.py  pool.py  registry.py  routing.py  serialization.py  session_view.py  tenant_config.py  turn_handling.py  validation.py  wiring.py
src/openrtc/execution/: coroutine.py  coroutine_server.py  file_watcher.py  prewarm.py
src/openrtc/observability/: __init__.py  base_observer.py  base_sink.py  footprint.py  introspection.py  introspection_ipc.py  introspection_runtime.py  log_scoping.py  metrics.py  observer.py  resident_set.py  savings.py  session_context.py  session_cpu.py  session_memory.py  slow_session.py  snapshot.py  stream.py  task_attribution.py  worker_stats.py
src/openrtc/reload/: __init__.py  base_reload.py  coordinator.py  module_reloader.py  pin.py  rebind.py  reporter.py  session_registry.py
src/openrtc/routing/: base_routing.py  default_routing.py  metadata_routing.py  request_filter.py  resolver.py  room_prefix_routing.py
src/openrtc/runtime/: base_runtime.py  coroutine_runtime.py  coroutine_server.py  prewarm.py  process_runtime.py  registry.py  resources.py
src/openrtc/tui/: app.py
src/openrtc/utils/: types.py  validation.py
tests/: conftest.py  test_audit.py  test_backend_seam.py  test_check_docs.py  test_circuit_breaker.py  test_cli.py  test_cli_hot_reload.py  test_cli_logs.py  test_cli_optional_extra_integration.py  test_cli_params.py  test_cli_serve.py  test_config.py  test_coroutine_backpressure.py  test_coroutine_coverage.py  test_coroutine_drain.py  test_coroutine_http_context.py  test_coroutine_inference_executor.py  test_coroutine_isolation.py  test_coroutine_job_context.py  test_coroutine_lifecycle.py  test_coroutine_memory_watermark.py  test_coroutine_server.py  test_coroutine_skeleton.py  test_coroutine_smoke.py  test_custom_router.py  test_dashboard.py  test_deployment_version.py  test_discovery.py  test_introspection.py  test_introspection_ipc.py  test_introspection_runtime.py  test_introspection_wiring.py  test_isolation_process_parity.py  test_livekit_compat.py  test_log_scoping.py  test_membership.py  test_metrics_sink.py  test_metrics_stream.py  test_multi_agent_registration.py  test_multi_tenant.py  (+41 more)
tests/benchmarks/: density.py  throughput.py
tests/execution/: test_file_watcher.py
tests/integration/: README.md  _fakes.py  conftest.py  test_concurrent_real_calls.py  test_coroutine_realmedia_liveness.py  test_coroutine_realroom.py  test_dev_server_fixture.py  test_hot_reload_live.py  test_hot_reload_live_rebind.py  test_hot_reload_realroom.py  test_per_agent_reload_realroom.py  test_three_agents_pool_ops.py  test_two_agents_realroom.py
tests/reload/: test_coordinator.py  test_end_to_end.py  test_module_reloader.py  test_per_agent_reload.py  test_pin.py  test_pool_hot_reload.py  test_rebind.py  test_reporter.py  test_server_reload.py  test_session_registry.py
tests/runtime/: test_file_watcher.py  test_file_watcher_smoke.py
(+20 files in other folders)
