[project]
name = "openrtc"
description = "Run multiple LiveKit voice agents in a single shared worker process."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "Mahimai Raja J", email = "hello@mahimai.dev" }]
keywords = ["agents", "ai", "audio", "livekit", "openrtc", "realtime", "webrtc"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "livekit-agents[openai,silero,turn-detector]~=1.5",
  "watchfiles>=0.21,<2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/mahimailabs/openrtc"
Issues = "https://github.com/mahimailabs/openrtc/issues"
Repository = "https://github.com/mahimailabs/openrtc"

[project.scripts]
openrtc = "openrtc.cli:main"

[project.optional-dependencies]
cli = [
  "rich>=13",
  "typer>=0.12",
]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "psutil>=7",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "python-dotenv>=1.2.2",
  "rich>=13",
  "ruff>=0.15.6",
  "typer>=0.12",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "."
fallback_version = "0.1.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["src/openrtc"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "off"

[tool.pytest.ini_options]
markers = [
  "integration: slower tests; some require a LiveKit dev server (see docker-compose.test.yml)",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "SIM",
  "PT",
  "RET",
  "PERF",
  "PIE",
  "ICN",
  "TID",
  "BLE",
  "A",
]
ignore = [
  "E501",
  "B008",
  "C901",
  "W191",
  # SIM117 (single `with` for nested contexts) hurts readability for tests
  # that arrange complex monkey-patches plus run_test() pilots; skip it.
  "SIM117",
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
